[package]
name = "codera1d-client"
version = "1.1.0"
authors = ["Sam Mauldin <sam@mauldin.me>"]
edition = "2021"
build = "build.rs"

[dependencies]
iced = { version = "0.9.0", features = ["debug", "tokio"] }
iced_futures = { version = "0.6.0", features = ["tokio"] }
iced_style = "0.8.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
reqwest = { version = "0.11.2", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.38"
inputbot = "0.5.0"
lazy_static = "1.4.0"
obfstr = "0.4.1"
if_chain = "1.0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
